# DATA24

./: .Rhistory  .Rprofile  .gitignore  .nojekyll  DATA24.Rproj  _quarto.yml  about.qmd  index.html  index.qmd  pivotjoin.qmd  pivotjoin.quarto_ipynb  pyproject.toml  sharing.qmd  visualization.html  visualization.qmd  visualization.quarto_ipynb  wrangling.qmd  wrangling.quarto_ipynb
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  lab_dataviz-checkpoint.html  lab_dataviz-checkpoint.ipynb
bffp/: BFFP 2020 Results - Top 3 Brands Per Year Per Country.xlsx  BFFplastics.csv  bffp-prepare.py
brand/: _brand.yml
cia/: 2_Birth rate.csv  2_Children under the age of 5 years underweight.csv  2_Death rate.csv  2_Education expenditures.csv  2_Infant mortality rate.csv  2_Maternal mortality ratio.csv  2_Net migration rate.csv  2_Obesity - adult prevalence rate.csv  2_Population growth rate.csv  2_Tobacco use.csv  2_Total fertility rate.csv  3_Carbon dioxide emissions.csv  3_Electricity - installed generating capacity.csv  3_Energy consumption per capita.csv  3_Revenue from coal.csv  3_Revenue from forest resources.csv  4_Current account balance.csv  4_Debt - external.csv  4_Exports.csv  4_GDP - composition, by sector of origin - agriculture.csv  4_GDP - composition, by sector of origin - industry.csv  4_GDP - composition, by sector of origin - services.csv  4_Gini Index coefficient - distribution of family income.csv  4_Imports.csv  4_Industrial production growth rate.csv  4_Inflation rate (consumer prices).csv  4_Labor force.csv  4_Military expenditures.csv  4_Public debt.csv  (+18 more)
(+36 files in other folders)
